# hype-dsp

./: .gitignore  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml  windows-driver.yml
.superpowers/sdd/: task-2-report.md  task-3-report.md  task-5-report.md  task-6-report.md  task-8-report.md
crates/hm-apo/: Cargo.toml
crates/hm-apo/src/: apo.rs  guids.rs  lib.rs
crates/hm-audio/: Cargo.toml
crates/hm-audio/src/: capture.rs  crossfade.rs  decode.rs  device.rs  diag.rs  engine.rs  error.rs  fingerprint.rs  ir_loader.rs  lib.rs  meta.rs  output_device.rs  queue.rs  resampler.rs  sources.rs  spectrum.rs  stems.rs  stream_queue.rs  streaming.rs  system_eq_linux.rs  system_eq_pipewire.rs  system_eq_pulse.rs  system_eq_shared.rs  system_eq_windows.rs  system_eq_windows_apo.rs  system_tap.rs  thread_util.rs  win_driver.rs
crates/hm-audio/tests/: engine_playback.rs  radio_playback.rs  system_tap.rs  system_tap_full.rs
crates/hm-core/: Cargo.toml
crates/hm-core/data/: autoeq_index.json  ddc_presets.json  headphones.json
crates/hm-core/src/: apo_ids.rs  apo_ipc.rs  autoeq_db.rs  chain_presets.rs  ddc_library.rs  error.rs  graphic_eq_import.rs  headphones.rs  lib.rs  license.rs  media_store.rs  presets.rs  store.rs  types.rs  vdc_import.rs
crates/hm-dsp/: Cargo.toml
crates/hm-dsp/src/: bass_boost.rs  biquad.rs  compander.rs  convolver.rs  delay.rs  gain.rs  graphic_eq.rs  headphone.rs  lib.rs  limiter.rs  oversample.rs  reverb.rs  room.rs  saturation.rs  script_stage.rs  spatializer.rs  surround3d.rs
crates/hm-dsp/src/script/: compiler.rs  lexer.rs  mod.rs  parser.rs  vm.rs
crates/hm-dsp/tests/: ui_examples.rs
crates/hm-link/: Cargo.toml
crates/hm-link/src/: lib.rs
crates/hm-media/: Cargo.toml
crates/hm-media/data/: radio_seed.json  tv_seed.json  world_countries.json
crates/hm-media/src/: error.rs  lib.rs  radio.rs  tv.rs
crates/hm-platform/: Cargo.toml
crates/hm-platform/src/: error.rs  lib.rs  macos.rs  util.rs  windows.rs
crates/hm-remote/: Cargo.toml
crates/hm-remote/src/: ffi.rs  lib.rs  manager.rs  phone.rs  secret.rs
crates/hm-stems/: Cargo.toml
crates/hm-stems/src/: lib.rs  onnx.rs
crates/hm-video/: Cargo.toml
crates/hm-video/src/: lib.rs
crates/hm-visualizer/: Cargo.toml  build.rs
crates/hm-visualizer/examples/: build_proof.rs
crates/hm-visualizer/src/: lib.rs  main.rs  projectm.rs
crates/hm-ytmusic/: Cargo.toml
crates/hm-ytmusic/src/: cookies.rs  explore.rs  innertube.rs  lib.rs  nav.rs  playlist.rs  radio.rs  search.rs  ytdlp.rs
crates/hm-ytmusic/tests/fixtures/: playlist_rows.json  radio_continuation.json  radio_page.json
docs/: architecture.md  audio-driver.md  auto-update.md  browser-extension.md  cloud-setup.md  macos-signing.md  system-eq.md  windows-apo.md  windows-driver.md
docs/superpowers/plans/: 2026-06-23-compander-metering-response.md  2026-06-23-convolver-graphiceq-import.md  2026-06-23-multiband-compander.md  2026-06-24-adaptive-bass.md  2026-06-24-chain-presets.md  2026-06-24-liveprog-eel.md  2026-06-24-tube-saturation.md  2026-06-25-poor-network-streaming.md  2026-07-15-dynamic-theme.md  2026-07-22-radio-autoqueue.md  2026-07-23-fastload-phase1.md  2026-07-23-fastload-phase2.md  2026-07-23-fastload-phase3.md  2026-07-23-fastload-phase4.md  2026-07-24-windows-apo-system-eq.md
docs/superpowers/specs/: 2026-06-18-phone-link-streaming.md  2026-06-20-remote-link-iroh.md  2026-06-21-stem-separation-demucs.md  2026-06-22-open-music-files-design.md  2026-06-23-convolver-graphiceq-import-design.md  2026-06-23-multiband-compander-design.md  2026-06-24-autoeq-db-fetch-design.md  2026-06-24-liveprog-eel-design.md  2026-06-24-tube-saturation-design.md  2026-06-25-poor-network-streaming-design.md  2026-06-26-non-blocking-library-load-design.md  2026-07-15-dynamic-theme-design.md  2026-07-15-stations-tv-design.md  (+8 more)
scripts/: build-macos-signed.sh  build-sidecar.mjs  build_demucs.sh  export_demucs_onnx.py  get_mpv.sh  get_stems_model.sh  release.mjs  setup-macos-signing.sh
snap/: snapcraft.yaml
src/: butterchurn.d.ts  main.tsx
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  installer-hooks.nsh  tauri.conf.json  tauri.windows.conf.json
src-tauri/apo/: README.md
src-tauri/capabilities/: default.json
src-tauri/drivers/HypeMuzikAudio/: README.md
src-tauri/icons/: icon.icns
src-tauri/resources/mpv/: README.md
src-tauri/src/: cloud.rs  cloud_list.rs  cloud_meta.rs  control.rs  lib.rs  main.rs  media.rs  tv_proxy.rs  updater.rs  ytmusic.rs
src-tauri/src/commands/: account.rs  apo_setup.rs  app.rs  audio.rs  autoeq.rs  cable.rs  chain_presets.rs  cloud.rs  engine.rs  identify.rs  install.rs  library.rs  license.rs  link.rs  linux_audio_setup.rs  lyrics.rs  mixer.rs  mod.rs  open_with.rs  presets.rs  profiles.rs  radio.rs  scenes.rs  stems.rs  tv.rs  video.rs  visualizer.rs  ytmusic.rs  ytmusic_setup.rs
src/app/: App.tsx  AuthGate.tsx  OnboardingGate.tsx  providers.tsx  router.tsx  routes.ts
src/components/: AuthScreen.tsx  Button.tsx  Card.tsx  Combobox.tsx  Dialog.tsx  EqBandSlider.tsx  FeatureView.tsx  LayoutToggle.tsx  LevelMeter.tsx  Logo.tsx  NavItem.tsx  NowPlayingBar.tsx  Onboarding.tsx  PageHeader.tsx  PowerToggle.tsx  QueueDrawer.tsx  ResizeHandle.tsx  RightSidebar.tsx  Segmented.tsx  Sidebar.tsx  SidebarNowPlaying.tsx  Slider.tsx  Switch.tsx  Toaster.tsx  TopBar.tsx  TrialBanner.tsx  TrialEndedScreen.tsx  VirtualGrid.tsx  VirtualList.tsx  VisualizerButton.tsx
src/lib/: beat.ts  cn.ts  cover.ts  eqBands.test.ts  eqBands.ts  format.ts  ipc.ts  lrc.ts  platform.ts  reducedMotion.ts  types.ts  useTrackArtwork.ts
src/stores/: account.ts  engine.test.ts  engine.ts  explore.test.ts  explore.ts  library.ts  musicLibrary.test.ts  musicLibrary.ts  networkMode.test.ts  networkMode.ts  radio.test.ts  radio.ts  systemEq.ts  theme.test.ts  theme.ts  toast.ts  ui.ts  visualizer.ts  warmup.test.ts  warmup.ts  ytDownloads.ts
src/styles/: focusRing.test.ts  index.css  palette.test.ts
(+71 files in other folders)
