[package]
name = "hypemuzik"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "HypeMuzik — system-wide audio enhancement desktop app."
default-run = "hypemuzik"

# The library target hosts the app so the same code can back a future mobile
# target; the binary is a thin launcher. (Standard Tauri 2 layout.)
[lib]
name = "hypemuzik_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = [] }
libc = "0.2"
tauri-plugin-opener = "2.5.4"
tauri-plugin-store = "2.4.3"
tauri-plugin-dialog = "2.7.1"
# Forwards a "open this file" second launch (Windows/Linux) to the running
# instance so file-manager opens don't spawn a duplicate app.
tauri-plugin-single-instance = "2"

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
arc-swap = { workspace = true }
# Async commands that need to wait without blocking a thread — the YouTube Music
# sign-in polls the login window's cookie jar.
tokio = { workspace = true }

# Cloud (Google Drive / Dropbox) — REST + desktop OAuth (loopback + PKCE).
reqwest = { workspace = true }
sha2 = "0.10"
base64 = "0.22"
url = "2"
getrandom = "0.2"

# Phone Link: a small control server phones cast to (POST /cast, /transport).
tiny_http = "0.12"

# OS media controls / "now playing": Control Center + media keys (macOS),
# System Media Transport Controls (Windows), MPRIS (Linux).
souvlaki = "0.8"

# Internal crates wired into the app.
hm-core = { workspace = true }
hm-ytmusic = { workspace = true }
hm-audio = { workspace = true }
hm-media = { workspace = true }
hm-platform = { workspace = true }
hm-link = { workspace = true }
hm-remote = { workspace = true }
hm-stems = { workspace = true }
hound = { workspace = true }
lofty = "0.24.0"


[target."cfg(target_os = \"macos\")".dependencies]
objc2-app-kit = { version = "0.3.2", features = ["NSColor", "NSWindow", "objc2-core-foundation"] }
