[package]
name = "hm-apo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "HypeMuzik system-wide EQ Audio Processing Object (Windows, audiodg.exe)."

# A COM in-proc server DLL loaded by the Windows audio engine. Only builds for
# the Windows target; on any other host `cargo build -p hm-apo` produces an empty
# crate (all code is `#[cfg(windows)]`), so the workspace still builds on macOS.
[lib]
crate-type = ["cdylib"]

[target.'cfg(windows)'.dependencies]
hm-core = { workspace = true }
hm-dsp = { workspace = true }
windows-core = "0.61"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Apo",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_SystemServices",
] }
