[package]
name = "hm-audio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Audio I/O for HypeMuzik: cpal devices, source/sink traits, the real-time engine."

[dependencies]
hm-core = { workspace = true }
hm-dsp = { workspace = true }
cpal = { workspace = true }
realfft = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

# Lock-free parameter handoff to the audio callback.
arc-swap = { workspace = true }

# WAV decode for Phase 2. Compressed formats (mp3/flac/aac/ogg) arrive via
# symphonia in Phase 5 (the media subsystem).
hound = { workspace = true }
