[package]
name = "hm-audio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Audio I/O for HypeMuzik: cpal devices, source/sink traits, the real-time engine."

[dependencies]
hm-core = { workspace = true }
hm-dsp = { workspace = true }
cpal = { workspace = true }
realfft = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

# Lock-free parameter handoff to the audio callback.
arc-swap = { workspace = true }

# Multi-format decode (mp3/flac/aac/wav/ogg/vorbis/isomp4).
symphonia = { workspace = true }

# Internet radio streaming: blocking HTTP + lock-free SPSC ring to the callback.
reqwest = { workspace = true }
rtrb = { workspace = true }

# Encode embedded cover art into a data: URI for the now-playing UI.
base64 = "0.22"
rusty-chromaprint = "0.3.0"

# Load impulse-response WAV files.
hound = { workspace = true }

# macOS system-wide capture via Core Audio process taps (macOS 14.4+).
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
block2 = "0.6"
objc2-core-audio = { version = "0.3", features = [
    "AudioHardware",
    "objc2",
    "objc2-foundation",
    "objc2-core-audio-types",
    "block2",
    "std",
] }
objc2-core-audio-types = "0.3"
objc2-core-foundation = { version = "0.3", features = [
    "CFDictionary",
    "CFString",
    "CFNumber",
    "CFArray",
] }
objc2-foundation = { version = "0.3", features = ["NSString", "NSArray"] }

[dev-dependencies]
# Generates WAV fixtures for decode/playback tests.
hound = { workspace = true }
