[package]
name = "hm-audio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Audio I/O for HypeMuzik: cpal devices, source/sink traits, the real-time engine."

[dependencies]
hm-core = { workspace = true }
hm-dsp = { workspace = true }
cpal = { workspace = true }
realfft = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

# Lock-free parameter handoff to the audio callback.
arc-swap = { workspace = true }

# Multi-format decode (mp3/flac/aac/wav/ogg/vorbis/isomp4).
symphonia = { workspace = true }

# Internet radio streaming: blocking HTTP + lock-free SPSC ring to the callback.
reqwest = { workspace = true }
rtrb = { workspace = true }

# Encode embedded cover art into a data: URI for the now-playing UI.
base64 = "0.22"
rusty-chromaprint = "0.3.0"

# Load impulse-response WAV files.
hound = { workspace = true }

# macOS system-wide capture via Core Audio process taps (macOS 14.4+).
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
block2 = "0.6"
objc2-core-audio = { version = "0.3", features = [
    "AudioHardware",
    "objc2",
    "objc2-foundation",
    "objc2-core-audio-types",
    "block2",
    "std",
] }
objc2-core-audio-types = "0.3"
objc2-core-foundation = { version = "0.3", features = [
    "CFDictionary",
    "CFString",
    "CFNumber",
    "CFArray",
] }
objc2-foundation = { version = "0.3", features = ["NSString", "NSArray"] }

# Windows system-wide EQ: WASAPI loopback capture → DSP → render, plus the
# undocumented IPolicyConfig (declared via the windows-core `interface` macro)
# for default-endpoint switching. Built/verified for the windows target via
# `cargo xwin` on the dev host and on CI's Windows runner, not natively on macOS.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_Media_KernelStreaming",
    "Win32_Media_Multimedia",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_UI_Shell_PropertiesSystem",
] }
# The undocumented IPolicyConfig is declared with the `#[interface]` macro, whose
# expansion references the `windows_core` crate by name (`::windows_core::…`), so
# it must be a direct dependency alongside the `windows` umbrella crate.
windows-core = "0.61"

[dev-dependencies]
# Generates WAV fixtures for decode/playback tests.
hound = { workspace = true }
