[package]
name = "hm-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared types, presets/profiles, persistence, and the licensing seam for HypeMuzik."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }

# The Windows APO's cross-process param IPC (`apo_ipc::SharedMapping`) is a
# named `CreateFileMappingW`/`MapViewOfFile` region. Version matches
# `hm-audio`'s Windows dependency for consistency across the workspace.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
] }
