[package]
name = "hm-media"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Local player and internet radio for HypeMuzik, routed through the DSP chain."

[dependencies]
hm-core = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
# Decode (symphonia), async/streaming (tokio + reqwest) are added in Phase 5
# alongside the player and radio implementations.
