[package]
name = "hm-media"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Local player and internet radio for HypeMuzik, routed through the DSP chain."

[dependencies]
hm-core = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Radio directory: radio-browser API over blocking HTTP.
reqwest = { workspace = true }
