[package]
name = "hm-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Per-app audio mixer and virtual-driver stubs for HypeMuzik (OS cfg-gated)."

[dependencies]
hm-core = { workspace = true }
thiserror = { workspace = true }

# macOS per-app mixer: Core Audio process enumeration + (later) process taps.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-core-audio = { version = "0.3", features = [
    "AudioHardware",
    "objc2",
    "objc2-foundation",
    "objc2-core-audio-types",
    "std",
] }
objc2-core-audio-types = "0.3"
objc2-core-foundation = { version = "0.3", features = ["CFString", "CFBase"] }
objc2-foundation = { version = "0.3", features = [
    "NSString",
    "NSArray",
    "NSDictionary",
] }
# App identity: NSRunningApplication (localized name / bundle id). Icons add
# NSImage/NSBitmapImageRep features in the next step.
objc2-app-kit = { version = "0.3", features = ["NSRunningApplication"] }

# Windows per-process volume uses the `windows` crate (IAudioSessionManager2,
# ISimpleAudioVolume); added behind a cfg(target_os = "windows") gate in Phase 4.
