[package]
name = "hm-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Per-app audio mixer and virtual-driver stubs for HypeMuzik (OS cfg-gated)."

[dependencies]
hm-core = { workspace = true }
thiserror = { workspace = true }

# macOS per-app mixer: Core Audio process enumeration + (later) process taps.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-core-audio = { version = "0.3", features = [
    "AudioHardware",
    "objc2",
    "objc2-foundation",
    "objc2-core-audio-types",
    "std",
] }
objc2-core-audio-types = "0.3"
objc2-core-foundation = { version = "0.3", features = ["CFString", "CFBase"] }
objc2-foundation = { version = "0.3", features = [
    "NSString",
    "NSArray",
    "NSDictionary",
    "NSData",
] }
# App identity + icons: NSRunningApplication (name/bundle/icon),
# NSImage/NSBitmapImageRep (icon → PNG bytes).
objc2-app-kit = { version = "0.3", features = [
    "NSRunningApplication",
    "NSImage",
    "NSImageRep",
    "NSBitmapImageRep",
] }

# Windows per-app mixer: WASAPI session volume (IAudioSessionManager2 /
# ISimpleAudioVolume) + process-name resolution. Icon extraction (Shell/GDI +
# png) is added once the WASAPI core is CI-verified.
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Threading",
] }
