[package]
name = "hm-remote"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Remote Phone Link over iroh — a transparent TCP-over-QUIC tunnel so the desktop reaches the phone's HTTP shelf server across any network."

[dependencies]
iroh = "1.0"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "net",
    "io-util",
    "macros",
    "sync",
    "time",
] }
anyhow = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "time"] }
