[package]
name = "hm-stems"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Offline stem separation (Demucs) — orchestrates the native separator sidecar, caches results, and manages the model."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
