[package]
name = "hm-stems"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Real-time stem separation (htdemucs ONNX, CoreML-accelerated) — separates a track into vocals/drums/bass/other in-process so the player's faders feel instant."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ort = { workspace = true }
hound = { workspace = true }
