[package]
name = "hm-visualizer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# Native MilkDrop (libprojectM v4) visualizer.
#
# `projectm-sys` compiles libprojectM from source via CMake. It's OPTIONAL and
# OFF by default, so the normal workspace build (and the existing CI clippy job)
# never needs the native toolchain (CMake / OpenGL / GLEW / vcpkg). Only the
# dedicated `milkdrop` CI job enables it.
#
# Linked STATICALLY on macOS/Linux (self-contained binary). On Windows the
# `static` feature is broken in projectm-sys — it builds `libprojectM-4.lib`
# (with a `lib` prefix) but tells MSVC to link `projectM-4`, which looks for the
# prefix-less name — so we use the default SHARED build there (a correctly-named
# import lib; the DLL ships alongside the app), as projectM's own CI does.
[features]
milkdrop = ["dep:projectm-sys", "dep:sdl2"]

[dependencies]
# Window + OpenGL context + input. `bundled` builds SDL2 from source (no system
# dep) and `static-link` folds it into the binary — projectM's own ecosystem
# uses SDL2, so this is a proven pairing.
sdl2 = { version = "0.37", optional = true, features = ["bundled", "static-link"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
projectm-sys = { version = "1", optional = true, features = ["static"] }

[target.'cfg(target_os = "windows")'.dependencies]
projectm-sys = { version = "1", optional = true }

# The visualizer sidecar binary — compiled only with `--features milkdrop`. The
# main Tauri app spawns it and pipes PCM to its stdin; it never links libprojectM.
[[bin]]
name = "hm-visualizer"
path = "src/main.rs"
required-features = ["milkdrop"]
